--- a/less/navbar.less
+++ b/less/navbar.less
@@ -13,6 +13,7 @@
   border-top: @border solid @color1;
   > a {
     &:hover, &:focus {
+      color: #eee !important;
       background: @color1 !important;
     }
   }
@@ -30,6 +31,7 @@
   border-top: @border solid @color3;
   > a {
     &:hover, &:focus {
+      color: #eee !important;
       background: @color3 !important;
     }
   }
